# pangram-sdk

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs-build.yml  publish-to-pypi.yml
checkforai/: __init__.py  text_classifier.py
docs/: conf.py  example_usage.py  index.rst  requirements.txt  tutorial.rst
docs/api/: checkforai.rst  pangram.rst  rest.rst
pangram/: __init__.py  text_classifier.py
tests/: checkforai_test.py  pangram_test.py
