[tool.poetry]
name = "pangram-sdk"
version = "0.1.11"
description = ""
authors = ["Max Spero <max@pangramlabs.com>"]
readme = "README.md"
packages = [
    { include = "pangram" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"
urllib3 = ">=2.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinxcontrib-httpdomain = "*"
sphinx_rtd_theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
