[tool.poetry]
name = "pangram-sdk"
version = "0.2.0"
description = ""
authors = ["Max Spero <max@pangramlabs.com>"]
readme = "README.md"
packages = [
    { include = "pangram" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.33.0,<3.0.0"
urllib3 = ">=2.7.0,<3.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinxcontrib-httpdomain = "*"
sphinx_rtd_theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
